# yandex-music-dump

./: .gitignore  pyproject.toml  yandex_music_download.py  yandex_music_get.py  ymd.tcss
cpp/: .clang-tidy  CMakeLists.txt
cpp/src/: main.cpp
cpp/src/api/: api_client.cpp  api_client.h  api_track.cpp  api_track.h
